--- a/about/index.html
+++ b/about/index.html
@@ -8,9 +8,8 @@
 	<script>(function(d,e){d[e]=d[e].replace("no-js","js");})(document.documentElement,"className");</script>
 	<meta name="description" content="">
 		<meta property="og:title" content="About" />
-<meta property="og:description" content="An open source enthusiast, yet, a Java deveploer.
-University: Henan University.
-Work Place: ShangHai" />
+<meta property="og:description" content="Welcome to my homepage! I&rsquo;m Hory, an open source enthusiast, yet, a Java developer. This should not be the first time I have set up a private website. As a person who is not used to improvising, I hope that my homepage can also keep up with the times, not just my technology, so this will not be the last time.
+The content of this blog is mainly based on various topics." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://horycloud.github.io/about/" /><meta property="article:section" content="" />
 
@@ -18,17 +17,15 @@ Work Place: ShangHai" />
 
 
 		<meta itemprop="name" content="About">
-<meta itemprop="description" content="An open source enthusiast, yet, a Java deveploer.
-University: Henan University.
-Work Place: ShangHai">
+<meta itemprop="description" content="Welcome to my homepage! I&rsquo;m Hory, an open source enthusiast, yet, a Java developer. This should not be the first time I have set up a private website. As a person who is not used to improvising, I hope that my homepage can also keep up with the times, not just my technology, so this will not be the last time.
+The content of this blog is mainly based on various topics.">
 
-<meta itemprop="wordCount" content="14">
+<meta itemprop="wordCount" content="257">
 <meta itemprop="keywords" content="" />
 		<meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About"/>
-<meta name="twitter:description" content="An open source enthusiast, yet, a Java deveploer.
-University: Henan University.
-Work Place: ShangHai"/>
+<meta name="twitter:description" content="Welcome to my homepage! I&rsquo;m Hory, an open source enthusiast, yet, a Java developer. This should not be the first time I have set up a private website. As a person who is not used to improvising, I hope that my homepage can also keep up with the times, not just my technology, so this will not be the last time.
+The content of this blog is mainly based on various topics."/>
 
 
 	<link rel="stylesheet" href="/css/style.css">
@@ -114,9 +111,10 @@ Work Place: ShangHai"/>
 	<svg class="meta__icon icon icon-author" width="16" height="16" viewBox="0 0 12 16"><path d="M6 1c2.2 0 3.5 2 3.5 4.5C9.5 7 8.9 8.2 8 9c2.9.8 4 2.5 4 5v1H0v-1c0-2.5 1.1-4.2 4-5-.9-.8-1.5-2-1.5-3.5C2.5 3 3.8 1 6 1z"/></svg><span class="meta__text">Hory</span>
 </div></div>
 		</header><div class="content post__content clearfix">
-			<p>An open source enthusiast, yet, a Java deveploer.</p>
-<p>University: Henan University.</p>
-<p>Work Place: ShangHai</p>
+			<p>Welcome to my homepage! I&rsquo;m Hory, an open source enthusiast, yet, a Java developer. This should not be the first time I have set up a private website. As a person who is not used to improvising, I hope that my homepage can also keep up with the times, not just my technology, so this will not be the last time.</p>
+<p>The content of this blog is mainly based on various topics. I choosed a relatively concise topic when I set up the blog, in order to bring readers a better reading experience. The advantage of the series of articles is that it can better establish the reader&rsquo;s grasp of a knowledge system, which is not available in other blog sites. Of course, if you think these articles are practical or even want to learn about some of my other technical articles, you can click the buttons in the navigation bar such as Github/Gitee to jump to the corresponding site, where there is more abundant content.</p>
+<p>As a non-subject program developer, supported by interest, I tried my best to move in this direction during my master&rsquo;s degree. In addition, I participated in some competitions, such as mathematical modeling competitions, Internet + competitions, etc., and achieved excellent results. Finally, when I graduated, I won the  Shanghai Outstanding Graduate of 2021,  and I got my wish and entered an Internet finance company.</p>
+<p>Of course, this is not the destination, but a new starting line, because you still don’t know what and how many difficulties ahead are waiting for you.</p>
 
 		</div>
 	</article>
