--- a/404.html
+++ b/404.html
@@ -130,6 +130,9 @@
 	<div class="widget__content">
 		<ul class="widget__list">
 			<li class="widget__item">
+				<a class="widget__link" href="/categories/design-pattern/">Design Pattern</a>
+			</li>
+			<li class="widget__item">
 				<a class="widget__link" href="/categories/java-collection/">Java Collection</a>
 			</li>
 		</ul>
@@ -138,6 +141,7 @@
 <div class="widget-taglist widget">
 	<h4 class="widget__title">Tags</h4>
 	<div class="widget__content">
+		<a class="widget-taglist__link widget__link btn" href="/tags/design-pattern/" title="Design Pattern">Design Pattern (1)</a>
 		<a class="widget-taglist__link widget__link btn" href="/tags/java/" title="Java">Java (7)</a>
 		<a class="widget-taglist__link widget__link btn" href="/tags/source/" title="source">source (7)</a>
 	</div>
